--- a/index.html
+++ b/index.html
@@ -7,36 +7,65 @@
     <title>Tea House</title>
     <!-- google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <!-- font-awesome links  -->
+    <script src="https://kit.fontawesome.com/53c713eca0.js" crossorigin="anonymous"></script>
     <!-- tailwind and daisy links -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- custom color  -->
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
 
     <style>
-        .manrope-font{
+        .manrope-font {
             font-family: "Manrope", sans-serif;
         }
-
-
     </style>
 </head>
 
 <body class="manrope-font">
 
+    <header class=" container mx-auto">
+        <div class="hero ">
+            <div class="hero-content flex-col lg:flex-row">
+               
+                <div>
+                    <h1 class="text-[80px] font-extrabold">It's good <br>
+                        tea time at The
+                        <br> Tea House
+                    </h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+                    <button class="btn btn-primary">Explore More</button>
+                </div>
+                <div>
+                    <img src="images/banner.png" class="max-w-sm " />
+                    <div>
+                        <div></div>
+                        <div>
+                            <h3>5.00</h3>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </header>
+
+    <main></main>
+
+    <footer></footer>
 </body>
 
 </html>
