--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <!-- font-awesome links  -->
-    <script src="https://kit.fontawesome.com/53c713eca0.js" crossorigin="anonymous"></script>
     <!-- tailwind and daisy links -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Boxicon links  -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
     <!-- custom color  -->
     <script>
         tailwind.config = {
@@ -38,22 +40,24 @@
 
     <header class=" container mx-auto">
         <div class="hero ">
-            <div class="hero-content flex-col lg:flex-row">
-               
+            <div class="hero-content flex-col lg:flex-row justify-between">
+
                 <div>
                     <h1 class="text-[80px] font-extrabold">It's good <br>
                         tea time at The
                         <br> Tea House
                     </h1>
-                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste
+                        Buds.</p>
                     <button class="btn btn-primary">Explore More</button>
                 </div>
-                <div>
-                    <img src="images/banner.png" class="max-w-sm " />
-                    <div>
-                        <div></div>
+                <div class="relative">
+                    <img src="images/banner.png" class="max-w-sm"/>
+
+                    <div class="flex items-center gap-3 shadow-lg rounded-lg bg-white p-3 w-60 absolute bottom-0 left-0">
+                        <div><i class='bx bxs-star text-5xl text-amber-400	'></i></div>
                         <div>
-                            <h3>5.00</h3>
+                            <h3 class="text-3xl font-extrabold">5.00</h3>
                             <p>Trust Pilot Ratings</p>
                         </div>
                     </div>
@@ -63,7 +67,9 @@
 
     </header>
 
-    <main></main>
+    <main class="container mx-auto">
+        
+    </main>
 
     <footer></footer>
 </body>
