Added Featrured product and grete tea pages

--- a/index.html
+++ b/index.html
@@ -2,76 +2,157 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tea House</title>
-    <!-- google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <!-- tailwind and daisy links -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Boxicon links  -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tea House</title>
+  <!-- google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <!-- tailwind and daisy links -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Boxicon links  -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 
-    <!-- custom color  -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        clifford: '#da373d',
-                    }
-                }
-            }
+  <!-- custom color  -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
         }
-    </script>
+      }
+    }
+  </script>
 
-    <style>
-        .manrope-font {
-            font-family: "Manrope", sans-serif;
-        }
-    </style>
+  <style>
+    .manrope-font {
+      font-family: "Manrope", sans-serif;
+    }
+  </style>
 </head>
 
 <body class="manrope-font">
 
-    <header class=" container mx-auto">
-        <div class="hero ">
-            <div class="hero-content flex-col lg:flex-row justify-between">
+  <header class=" container mx-auto">
+    <div class="hero ">
+      <div class="hero-content flex-col lg:flex-row justify-between">
 
-                <div>
-                    <h1 class="text-[80px] font-extrabold">It's good <br>
-                        tea time at The
-                        <br> Tea House
-                    </h1>
-                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste
-                        Buds.</p>
-                    <button class="btn btn-primary">Explore More</button>
-                </div>
-                <div class="relative">
-                    <img src="images/banner.png" class="max-w-sm"/>
+        <div>
+          <h1 class="text-[80px] font-extrabold">It's good <br>
+            tea time at The
+            <br> Tea House
+          </h1>
+          <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste
+            Buds.</p>
+          <button class="btn btn-primary">Explore More</button>
+        </div>
+        <div class="relative">
+          <img src="images/banner.png" class="max-w-sm" />
 
-                    <div class="flex items-center gap-3 shadow-lg rounded-lg bg-white p-3 w-60 absolute bottom-0 left-0">
-                        <div><i class='bx bxs-star text-5xl text-amber-400	'></i></div>
-                        <div>
-                            <h3 class="text-3xl font-extrabold">5.00</h3>
-                            <p>Trust Pilot Ratings</p>
-                        </div>
-                    </div>
-                </div>
+          <div class="flex items-center gap-3 shadow-lg rounded-lg bg-white p-3 w-60 absolute bottom-0 left-0">
+            <div><i class='bx bxs-star text-5xl text-amber-400	'></i></div>
+            <div>
+              <h3 class="text-3xl font-extrabold">5.00</h3>
+              <p>Trust Pilot Ratings</p>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </header>
+
+  <main class="container mx-auto">
+    <!-- Our Featured Products -->
+    <section class="my-20 text-center">
+      <h2 class="text-4xl font-extrabold mb-4">Our Featured Products</h2>
+      <p class="text-base text-gray-500 w-8/12 mx-auto leading-7	mb-5">There are many variations of passages of Lorem
+        Ipsum available, but the majority have suffered alteration
+        in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+      <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+        <div class="card  bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="images/tea-1.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Milk Tea</h2>
+            <p>Creamer could be replaced by fresh milk</p>
+
+          </div>
         </div>
 
-    </header>
 
-    <main class="container mx-auto">
-        
-    </main>
+        <div class="card  bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="images/tea-2.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Black Tea</h2>
+            <p>Creamer could be replaced by fresh milk</p>
 
-    <footer></footer>
+          </div>
+        </div>
+
+        <div class="card  bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="images/tea-3.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Lemon Tea</h2>
+            <p>Creamer could be replaced by fresh milk</p>
+
+          </div>
+        </div>
+
+        <div class="card bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="images/tea-4.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Green Tea</h2>
+            <p>Creamer could be replaced by fresh milk</p>
+
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- great tea  -->
+
+    <section class="my-20 flex flex-col lg:flex-row gap-12" >
+      <div class="grid grid-cols-1 gap-8 md:grid-cols-2 flex-1">
+        <div class="rounded-xl h-36 bg-gradient-to-r from-red-500 to-orange-500 opacity-10	 	"></div>
+        <div class="row-span-2 bg-[#E6A6231A] flex justify-center items-center"><img class="px-8 py-12" src="/images/fresh-1.png" alt=""></div>
+        <div class="row-span-2 bg-[#5776391A] flex justify-center items-center"><img class="px-8 py-12" src="/images/fresh-2.png" alt=""></div>
+        <div class="rounded-xl h-36	bg-gradient-to-r from-gray-600 to-gray-50 opacity-20	"></div>
+
+
+      </div>
+
+      <div class="flex-1 space-y-5">
+        <h3 class="text-5xl font-extrabold mb-5">Great Tea, Freshly <br> Presented</h3>
+        <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents
+          the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its
+          custoers because of good words of mouth and unique customized service orginated from Taiwan.</p>
+        <h4 class="text-xl font-extrabold">Unique Taste</h4>  
+        <p>A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+        <h4 class="text-xl font-extrabold">Premium Quality</h4>
+        <p>Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+      </div>
+
+
+    </section>
+
+  </main>
+
+  <footer></footer>
 </body>
 
 </html>
