--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
       <div class="grid grid-cols-1 gap-8 md:grid-cols-2 flex-1">
         <div class="rounded-xl h-36 bg-gradient-to-r from-red-500 to-orange-500 opacity-10	 	"></div>
         <div class="row-span-2 bg-[#E6A6231A] flex justify-center items-center"><img class="px-8 py-12"
-            src="/images/fresh-1.png" alt=""></div>
+            src="images/fresh-1.png" alt=""></div>
         <div class="row-span-2 bg-[#5776391A] flex justify-center items-center"><img class="px-8 py-12"
-            src="/images/fresh-2.png" alt=""></div>
+            src="images/fresh-2.png" alt=""></div>
         <div class="rounded-xl h-36	bg-gradient-to-r from-gray-600 to-gray-50 opacity-20	"></div>
 
 
